--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "data-ingestion-api",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "server.js",
   "engines": {
     "node": ">=14.0.0"
   },
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "jest --forceExit --detectOpenHandles --coverage",
     "test:watch": "jest --watchAll"
   },
